--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fragrances_app",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,25 +10,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.6.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.27",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.3",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "^14.0.2",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
+    "jwt-decode": "^4.0.0",
+    "lucide-react-native": "^0.475.0",
+    "mime": "^4.0.6",
+    "phosphor-react-native": "^2.3.1",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-axios": "^0.17.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
